<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">畅享之游</string>
    <string name="eyt">畅享之游客户端</string>
    <string name="action_settings">反馈意见</string>
    <string name="ic_menu_search">搜索</string>
    <string name="first_text">推荐</string>
    <string name="second_text">随机</string>
    <string name="third_text">约游</string>
    <string name="fourth_text">搜索</string>
    <string name="myWeather">天气</string>
    <string name="item2">修改密码</string>
    <string name="item3">关于我们</string>
    <string name="eyt_tite">攻略标题</string>
    <string name="eyt_Strategy">攻略内容</string>
    <string name="eyt_tite_content">标题内容</string>
    <string name="eyt_opinion">意见标题</string>
    <string name="eyt_opinion_content">意见内容</string>
    <string name="eyt_Strategy_time">攻略时间</string>
    <string name="eyt_remove">清除</string>
    <string name="eyt_Add_images">添加图片</string>
    <string name="eyt_Set_out">出发：</string>
    <string name="eyt_Set_out_place">请输入出发地点</string>
    <string name="eyt_arrive">到达：</string>
    <string name="eyt_arrive_place">请输入到达地点</string>
    <string name="eyt_The_bus">公交</string>
    <string name="eyt_driving">驾车</string>
    <string name="eyt_walking">步行</string>
    <string name="eyt_Home_page">首页</string>
    <string name="eyt_collection">收藏</string>
    <string name="eyt_strategy">攻略</string>
    <string name="eyt_The_map">地图</string>
    <string name="eyt_Chat_about">畅聊</string>
    <string name="eyt_determine">确定</string>
    <string name="eyt_Say_something">说点什么吧&#8230;</string>
    
    

    <!-- 聊天 -->
    <!-- <string name="action_settings">Settings</string> -->
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入邮箱&#8230;</string>
    <string name="login_again_password">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_pwds">新密码 </string>
    <string name="pwd_again">确认密码 </string>
    <string name="login_email">邮箱</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_email_null">邮箱不正确</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <!-- 摇一摇 -->
    <string name="shake_getfial">hhhhh</string>
    <string name="shake_a_friend" />
    <string name="shake_finding">正在为你随机分配景点</string>

    
    <!-- 百度地图 -->
    <string name="Switch_on">经纬度转地址:开</string>
    <string name="Switch_off">经纬度转地址:关</string>
    
    
    <string name="source">信息来源：分享</string>
    <string name="www">官方网站：www.gemptc.com</string>
    <string name="version">版本：v1.0</string>
    <string name="Copyright">Copyright@2015高博教育All Rights Reserved</string>
	<string name="introduce">成员：张仲光，黄典新，刘观兰，陈征和</string>
	<!-- 天气 -->
    <string-array name="citys">
        <item>自动定位</item>
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>天津</item>
        <item>重庆</item>
        <item>西安</item>
        <item>成都</item>
        <item>杭州</item>
        <item>南京</item>
        <item>苏州</item>
        <item>武汉</item>
        <item>东莞</item>
        <item>宁波</item>
        <item>厦门</item>
        <item>福州</item>
        <item>昆明</item>
        <item>沈阳</item>
        <item>长春</item>
        <item>大连</item>
        <item>济南</item>
        <item>郑州</item>
        <item>长沙</item>
        <item>合肥</item>
        <item>哈尔滨</item>
        <item>石家庄</item>
        <item>南昌</item>
        <item>佛山</item>
        <item>珠海</item>
        <item>无锡</item>
        <item>青岛</item>
        <item>呼和浩特</item>
        <item>乌鲁木齐</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台北</item>
        <item>南宁</item>
        <item>拉萨</item>
        <item>兰州</item>
        <item>西宁</item>
        <item>三亚</item>
    </string-array>

</resources>