<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/ic_launcher" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/eyt"
        android:textColor="@color/gray"
        android:textSize="@dimen/base_action_bar_title_size" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:text="@string/www"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:text="@string/Copyright"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/introduce"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/version"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/source"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_medium" />

</RelativeLayout>
