<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_actionbar">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent">
     
    <Button
        android:id="@+id/stra_addimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
      
        android:layout_margin="2dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/eyt_Add_images"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/stra_img"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentLeft="true"
        android:layout_margin="1dp"
        android:layout_below="@+id/stra_addimg"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stra_img"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_Stra_title"
            android:background="@drawable/edit_bg_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/stra_addimg"
            android:layout_below="@+id/stra_img"
            android:ems="10"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:hint="@string/eyt_tite"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edit_stra_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bg_selector"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:hint="@string/eyt_Strategy"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_stra_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_selector"
                android:text="@string/eyt_remove"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/up_strategy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_selector"
                android:text="@string/eyt_determine"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>