<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_actionbar" >

	<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/addimage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="2dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/eyt_Add_images"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="3dp"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:layout_below="@+id/linearLayout1">
    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/eyt_determine"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_below="@+id/editText_write_tell"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

    <EditText
        android:id="@+id/editText_write_tell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg_selector"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:ems="10"
        android:hint="@string/eyt_Say_something"
        android:inputType="textMultiLine" />
</RelativeLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>