<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2b2c30"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/uesr_log"
                android:layout_width="fill_parent"
                android:layout_height="80dp" >

                <TextView
                    android:id="@+id/login_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/iv_set_avator"
                    android:text="@string/add_name"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/iv_set_avator"
                    style="@style/Smile.ImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:padding="5dp"
                    android:src="@drawable/head" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_home"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:text="@string/eyt_Home_page"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_search"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_collect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:text="@string/eyt_collection"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_local"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_strategy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:text="@string/eyt_strategy"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_tuwen"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_connact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:text="@string/eyt_Chat_about"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_settings"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_tell" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:textColor="#ffffff"
                    android:text="@string/third_text"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_weather"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/my_footprint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"
                    android:text="@string/eyt_The_map"
                    android:textColor="#ffffff"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#F8F8FF" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#F8F8FF" />

            <RelativeLayout
                android:id="@+id/menu_about"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:background="@drawable/more_layout_style"
                android:clickable="true"
                android:gravity="center_vertical" >

                <Button
                    android:id="@+id/btn_logout"
                    style="@style/Smile.Button.logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/logout" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>